Checkpoint: current hardening tree before re-applying loop-stall fixes
Baseline of the in-progress V3 hardening work (uncommitted until now) so it
cannot be lost. Off-loop SSL tasks, off-loop DNS, adaptive handler offload, the
path/header parse fast-paths and the IOLoop attachment refactor are present;
the WebSocket/100-Continue non-blocking writes, batched accept, and off-loop
static/gzip/inbound-parse loop-stall fixes are applied in the following commits.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>